refactor GUIs, Database methods, Item Stack serializer, fix bugs.